feat: upgrade to Java 21